--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/pages/assets/css/0.styles.fd7fbea2.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/pages/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/pages/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"><!----><!----></div></div>
     <script src="/pages/assets/js/app.eb2a40b0.js" defer></script><script src="/pages/assets/js/7.1a5610d7.js" defer></script>
